2001-11-17  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* configure.in: fix test for freetype includes.
	* t42.h: include <config.h> before using values defined in it.
	* close_font.c, init.c, open_font.c: fix freetype header inclusion.

2000-11-27  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* t42.h: include <freetype/freetype.h> if we have it.

	* configure.in: change ttf check to work with new layout of
	freetype install and NetBSD ELF.  Check wether we have
	<freetype/freetype.h> or <freetype.h>.
	
1999-07-23  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* open_font.c (open_font): fall back to full_name if ps name not
	defined.  [patch by Johan Vromans]

1999-05-05  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* main.c (find_cid): implemented searching (was dummy function).
	(main): check return value of find_cid.

	* util.c (write_sfnts, write_table_dir): fixed bug on systems with
	sizeof(long) != 4.

1999-04-27  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* cidtoacid.c (main): report error return from cid_read.

	* cid_aread.c (cid_aread): allow for missing cid values in
	Encoding section (treat as unencoded).

1999-04-23  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* configure.in: check for TTO_GSUB_Apply to determine GSUB support
	in FreeType.

	* cid_mkmap.c (cid_mkmap): do feature substitution (currently
	doing nothing since not implemented in FreeType 1.2).
	(get_feature), (apply_features): new functions.

1999-04-20  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* cid_mkmap.c (cid_mkmap): return last defined cid + 1.

	* open_font.c (open_font): fixed compile failure if gsub support
	missing.

	* main.c (main): use find_cid to read cid struct.
	(find_cid): dummy definition

	* cid.c: removed.
	* write_cid2.c (write_cidmap): moved here from cid.c; now uses
	cid_mkmap.
	* cid_mkmap.c (cid_mkmap): new function

	* changed malloc to xmalloc and realloc to xrealloc throughout.

	* cid_util.c (cid_free), cid_write.c (cid_write), cid_read.c