@@ -26,10 +26,17 @@
 #include <stdlib.h>
 #include <limits.h>
 #include <time.h>
-#include <ftxpost.h>
-#include <ftxkern.h>
 
 #include "config.h"
+
+#ifdef HAVE_FREETYPE_FREETYPE_H
+#include <freetype/ftxpost.h>
+#include <freetype/ftxkern.h>
+#else
+#include <ftxpost.h>
+#include <ftxkern.h>
+#endif
+
 #include "t42.h"
 
 struct glyph {
